@@ -22,3 +22,14 @@ java -jar hoge.jar
 binfmt-supportを入れると直接実行できるけど、chmod u+x hoge.jarする必要があってjarを作るたびにやるのめんどい。  
 <br>
 
+- JAVA  
+環境：  
+Linux/Debian(CloudReady)  
+事象：  
+JavaFXを使ったjarの実行  
+対処：  
+~~~
+java --module-path $PATH_TO_FX --add-modules javafx.controls -jar foobar.jar  
+~~~
+くそめんどい。  
+<br>
